Add unanswered questions option to validSorts variable in category.js and to categoryTopicSort in settings.tpl. Modified language file to include the unanswered questions key

--- a/public/language/en-GB/topic.json
+++ b/public/language/en-GB/topic.json
@@ -208,6 +208,9 @@
 	"newest-to-oldest": "Newest to Oldest",
 	"recently-replied": "Recently Replied",
 	"recently-created": "Recently Created",
+
+	"unanswered-questions": "Unanswered Questions",
+
 	"most-votes": "Most Votes",
 	"most-posts": "Most Posts",
 	"most-views": "Most Views",
